--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,3 +14,82 @@
  *= require_tree .
  *= require_self
  */
+
+.vsc-initialized{
+  margin: 0;
+}
+
+.title-box{ 
+  max-width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  background-color: palevioletred;
+  margin: 0;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+footer{
+  margin-top: 100px;
+  float: right;
+}
+
+h1{
+font-family: cursive;
+}
+
+a:visited { 
+  color: rgb(68, 65, 68); 
+  text-decoration:none;
+}
+
+a{
+  text-decoration:none;
+}
+
+ul{
+  list-style: none;
+}
+
+.yield{
+  width: 700px;
+  margin: 0 auto;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.yield h2{
+  margin : 50px 290px 20px;
+  font-family: cursive;
+  font-size: 30px;
+}
+
+.yield .button{
+  /* width: 200px; */
+  height: 40px;
+  padding: 0;
+  color: rgb(255, 255, 255);
+  font-size: 12px;
+  background-color: palevioletred;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.yield a:visited{
+  color: black;
+}
+
+.yield ul{
+  padding: 0;
+}
+
+.yield li{
+  border: 1px solid rgb(155, 152, 152);
+  color: rgb(68, 65, 68);
+  padding: 7px 7px 15px;
+}
+
+.yield li:hover{
+  background-color: rgb(255, 224, 245)
+}
